@@ -55,8 +55,8 @@ sub usage {
 
 #Support dbconfig-common generated database settings, if available
 our ($dbuser, $dbpass, $basepath, $dbname, $dbserver, $dbport, $dbtype);
-if( -e '/etc/ykksm/config-db.cfg' ) {
-    require '/etc/ykksm/config-db.cfg';
+if( -e '/etc/yubico/ksm/config-db.cfg' ) {
+    require '/etc/yubico/ksm/config-db.cfg';
 } else {
     $dbtype = 'mysql';
     $dbname = 'ykksm';
