@@ -1,5 +1,9 @@
 * Version 1.10 (unreleased)
 
+  * Changed location of files to /usr/share/yubikey-ksm, etc.
+
+  * Changed location of configuration files to /etc/yubico/ksm/.
+
 * Version 1.9 (released 2013-01-23)
 
   * Renamed hex2bin to yubi_hex2bin.
@@ -18,7 +22,7 @@
     Issue #5 reported by Gyula Szabó, see:
     http://code.google.com/p/yubikey-ksm/issues/detail?id=5>.
 
-  * Read database config from /etc/ykksm/config-db files,
+  * Read database config from /etc/yubico/ksm/config-db files,
     as generated by dbconfig.
 
 * Version 1.6 (released 2012-12-18)
